<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <GVL Name="GVL_VISU_SCHRAUBER" Id="{9b4854c9-5289-476d-ad37-e64025666b63}">
    <Declaration><![CDATA[{attribute 'Tc2GvlVarNames'}
VAR_GLOBAL
	stSKSSchrauberInOut_Vis_Schr_1		:ST_SKSSchrauberInOut_Vis;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>