<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <GVL Name="GlobalVar_Constant" Id="{98f84d25-f59d-4669-9489-fc641b9cbdf5}">
    <Declaration><![CDATA[{attribute 'Tc2GvlVarNames'}
VAR_GLOBAL CONSTANT
	cGrundPos								:INT :=1;
	cBearbPos								:INT :=3;
	
	cAxis1261_Schrauber1					:INT := 1;
	cEnc03_Schrauber1						:INT := 2;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>