<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <GVL Name="GlobalVar_InOut" Id="{a824e907-d62f-4bf8-aedb-ae1d979d2b48}">
    <Declaration><![CDATA[{attribute 'Tc2GvlVarNames'}
VAR_GLOBAL
	(* Inputs *)
	bGVLEndlageZyl_1_Eingef	AT %I*: BOOL;
	bGVLEndlageZyl_1_Ausgef	AT %I*: BOOL;
	
	bGVLEndlageZyl_2_Eingef	AT %I*: BOOL;
	bGVLEndlageZyl_2_Ausgef	AT %I*: BOOL;
	
	(* Outputs *)
	bGVLVentil_1_Ausfahr	AT %Q*: BOOL;
	bGVLVentil_1_Einfahr	AT %Q*: BOOL;
	
	bGVLVentil_2_Ausfahr	AT %Q*: BOOL;
	bGVLVentil_2_Einfahr	AT %Q*: BOOL;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>