<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <GVL Name="GlobalVar_NcAchsen" Id="{07d529d0-69d7-4660-acdd-b0c75df8d573}">
    <Declaration><![CDATA[{attribute 'Tc2GvlVarNames'}
VAR_GLOBAL
	
	arrAxis									: ARRAY[1..2] OF AXIS_REF;
	arrNcAchsen								: ARRAY[1..2] OF  TC3_UniLib.ST_NcAchsen;		(* Achtung 1 = Achse / 2= Encoder für Tiefenmessung *)
	arrStartAusf							: ARRAY[1..2] OF FB_AchsStartAusf;
	arrAnstgSchrauberAchse					: ARRAY[1..2] OF FB_AchsKontrlAnstg;
	
	arrBetrartAutomAktiv					:ARRAY[1..2] OF BOOL;
	arrAntrGruppeFrg						:ARRAY[1..2] OF BOOL;
	stParamSKSServoschrauber				:ST_ParamSKSServoschrauber;
	
	objSchlauch								: FB_Obj_IOSchlauch;
	stAchsMeldung							: ST_MeldServoSchrauber_1;					
	bTakt2Langsam							:BOOL;
	
	
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>